--- a/docs/Apuntes/5-ciclo/Arqui-computador-1/2-NASM/5.Lectura-de-datos.md
+++ b/docs/Apuntes/5-ciclo/Arqui-computador-1/2-NASM/5.Lectura-de-datos.md
@@ -1,3 +1,7 @@
 Para poder leer datos en ensamblador hacemos uso de la funcion SYS_READ en linux, y guardamos el espacio en memoria para la lectura de datos en una seccion .bss
 
 ![[docs/0-RES/arqui/1/NASM/2.include/v7/hola-v7.asm]]
+
+Tambien, hemos creado la funcion read en un archivo aparte para que podamos llamar a la función 
+ ![[docs/0-RES/arqui/1/NASM/2.include/v8/hola-v8.asm]]![[docs/0-RES/arqui/1/NASM/2.include/v8/stdin32.asm]]
+ 
