ya no tira error al imprimir varias veces

--- a/docs/Apuntes/5-ciclo/Arqui-computador-1/2-NASM/6.Ciclos-numeros.md
+++ b/docs/Apuntes/5-ciclo/Arqui-computador-1/2-NASM/6.Ciclos-numeros.md
@@ -7,4 +7,7 @@ Podemos ver el codigo actual aqui.
 ![[docs/0-RES/arqui/1/NASM/ejercicios/contador/v1/contadorStr.asm]]
 
 ### Segunda fase
-Ahora buscamos modificar la tabla contador de modo que esta pueda convertir textos a enteros y vice versa
+Ahora buscamos modificar la tabla contador de modo que esta pueda convertir textos a enteros y vice versa.
+
+	NOTA: ACUALMENTE ESTAMOS IMPLEMENTANDO MAL EL UPPERCASE Y LOWERCASE, DEBERIAMOS REUTILIZAR CODIGO
+
