--- a/docs/Apuntes/5-ciclo/Arqui-computador-1/2-NASM/6.Ciclos-numeros.md
+++ b/docs/Apuntes/5-ciclo/Arqui-computador-1/2-NASM/6.Ciclos-numeros.md
@@ -11,3 +11,28 @@ Ahora buscamos modificar la tabla contador de modo que esta pueda convertir text
 
 	NOTA: ACUALMENTE ESTAMOS IMPLEMENTANDO MAL EL UPPERCASE Y LOWERCASE, DEBERIAMOS REUTILIZAR CODIGO
 
+TODO: `debemos arreglar el hecho que el loop no imprima el numero 11, sino imprime ;, esto es un tratado de funciones`
+
+https://www.tutorialspoint.com/index.htm es una pagina que nos sirve para estudiar
+
+https://www.w3schools.com/
+
+#### Tercera fase
+	NOTA: no hemos resuelto el problema de la fase 2 JAJAJ, pero tenemos que continuar la clase, ahora buscamos hacer un contador con impresion en pantalla de valores numericos
+
+Haremos un contador de 0 a 10 con impresion en pantalla
+al dividir, el cociente se queda en eax, y el residuo en ebx
+
+Si se efecuta una multiplicacion y el resulatdo es un long, la mitad de ese long se guarda en a y la otra mitad en eax. Por eso siempre vamos a guardar los datos
+
+Cuando llamemos a div, debemos usar las siguientes cosas
+
+`mov ecx, 0 ; iniciamos el contador en 0`
+`inc ecx ; primer digito`
+`mov edx, 0 ;`
+
+esto porque div usa el valor de eax y edx para los numeros y los divide por el valor que mandemos.
+
+RESIDUO EN EDX Y EL VALOR EN EAX
+
+![[contadoriprint.asm]]
