--- a/docs/Apuntes/6-ciclo/IO-1/2023-09-07/2023-09-07-Rutas.md
+++ b/docs/Apuntes/6-ciclo/IO-1/2023-09-07/2023-09-07-Rutas.md
@@ -15,3 +15,64 @@ La suma de los números de carné dirán cuál es mi destino.
 	- La calculo con distancia, rendimiento
 
 No contemplar depreciaciones para este ejercicio, pero en el campo, si tenemos que tomar en cuenta el desgaste de llantas, timones, líquidos, motor, carcaza, pastillas, transmisión...
+
+
+# EJERCICICO
+
+CARNÉ: 2121323
+
+2 + 1 + 2 + 1 + 3 + 2 + 3 = 14
+
+DESTINO: Zacapa
+
+Cálculos de rendimiento del vehículo por kilómetro
+De San Pedro San Marcos (casa) a Quetzaltenango (casa) son 46 km y se consumen 1.5 galones, asumiendo el precio actual de los galones en 36.59, haremos los cálculos.
+
+0.033 galones de  por kilómetro
+que se traduce en Q1.193 por kilometro
+
+- RESPUESTAS
+- VEHÍCULO
+	- Walkswagen Jetta del 2000
+	- v2.0
+	- Tracción trasera
+	- Combustible Super o Regular
+	- 0.033 galones por kilometro
+- RUTAS
+	- Vía Panamericana CA-1 y CA-9.
+		- Trackeo
+			- Partimos de San Pedro
+			- Pasamos por Quetzaltenango
+			- Rumbo a Totonicapán
+			- Rumbo a Tecpán
+			- Entramos a Guatemala por Mixco en Zona 7
+			- Tomamos CA-9 rumba a Chato
+			- CA-9 nos lleva hasta la entrada de Zacapa
+		- Vista en MAPS
+			- https://maps.app.goo.gl/BbNpfEqjkvMUMrKY9
+			- ![[frame.png]]
+		- Kilómetros
+			- 390KM
+		- Tiempo aproximado
+			- 7 horas 40 minutos +- 1 hora según tráfico
+		- Costo de viaje
+			- Q465.32 en gasolina
+	- RUTA 2: por CA-2 y Costa
+		- Trackeo
+			- Salimos de San Pedro San Marcos
+			- Rumbo a la esperanza quetzaltenango
+			- Rumbo a Rio Bravo
+			- Rumbo a Amatitlán
+			- Rumbo a Zona 4, Mixco, Guatemala
+			- Rumbo a Jalapa
+			- Rumbo a Chiquimula
+			- Rumbo a Zacapa
+		- Vista en MAPS
+			- https://maps.app.goo.gl/cwC2Dt6314f4r4C78
+			- ![[frame (1).png]]
+		- Kilómetros
+			- 371.679km
+		- Tiempo aproximado
+			- 10 horas +- 1 hora por tráfico
+		- Costo de viaje
+			- 443.41
