--- a/docs/Apuntes/6-ciclo/compiladores/2023-11-08-YAC.md
+++ b/docs/Apuntes/6-ciclo/compiladores/2023-11-08-YAC.md
@@ -1,5 +1,13 @@
 ```
+LEX
+
 yylval.yylreal para guardar un real
 val(yytext, yylval.yyReal, resultado)
 nota: se traduce en, castea el yytext a un real, si hay un error, guarda el mensaje en <resultado>
+
+
+YAC
+
+agregar la nota: %token <REAL> NUM para indicar que es un token REAL de tipo NUM
 ```
+
