--- a/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-04-Ejemplos.md
+++ b/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-04-Ejemplos.md
@@ -73,3 +73,8 @@ vamos a suponer que los planes del ejercicio 1 generan 60,000 anuales
 ![[Pasted image 20240904205805.png]]
 
 SIGUE SIENDO MEJOR EL PLAN 1
+
+
+SIN MCM
+
+![[Pasted image 20240913231233.png]]
