--- a/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-11-Repaso.md
+++ b/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-11-Repaso.md
@@ -6,3 +6,13 @@ $$
 
 donde `n1` es el no. de perdiodo, ej si MCM es 6, y el otro valor es 3, entonces N es 6 y n1 es 3
 
+sea N = el periodo n original y M el valor del MCM, donde N incrementa en modo de periodos originales hasta llegar a ser M, ej. si n es 2 y M es 8, ,entonces n seria 2, 4, 6, 8...
+
+$$
+- II - \sum_{n=N}^{M-N}{II(P/F, i, n)} - A(P/A,i,M) + \sum_{n=N}^{M}{VS(P/F,i,n)}
+$$
+
+$$
+- \sum_{n=0}^{M-N}{II\frac{1}{(1+i)^n}} - A\left[\frac{(1+i)^n-1}{i*(1+i)^n}\right] + \sum_{n=N}^{M}{VS\frac{1}{(1+i)^n}}
+$$
+
