--- a/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-04-Ejemplos.md
+++ b/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-04-Ejemplos.md
@@ -60,7 +60,7 @@ Un proyecto tiene 2 planes, los ingresos serian iguales en los dos planes = pero
 
 1. Diagrama de flujo de efectivo
 2. Despejar formulas y resolver
-	1. Da como resultado un G = -215048.61, da negativo porque unicamente estamos generando egresos, nunca recuperamos dinero.
+	1. Da como resultado un G = -215048.61, da negativo porque únicamenteestamos generando egresos, nunca recuperamos dinero.
 	2. ![[Pasted image 20240904204830.png]]
 	3. -228611.02 para el paln 2
 
