--- a/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-11-Repaso.md
+++ b/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-11-Repaso.md
@@ -1,7 +1,7 @@
 CUANDO SON FECHAS DISTINTAS
 
 $$
-- II - A\left[\frac{(1+i)^n-1}{i*(1+i)^n}\right] + (VS -II) \left[ \frac{i}{(1+i)^n_1 }\right] + VS\left[ \frac{i}{(1+i)^n }\right]
+- II - A\left[\frac{(1+i)^n-1}{i*(1+i)^n}\right] + (VS -II) \left[ \frac{1}{(1+i)^n_1 }\right] + VS\left[ \frac{1}{(1+i)^n }\right]
 $$
 
 donde `n1` es el no. de perdiodo, ej si MCM es 6, y el otro valor es 3, entonces N es 6 y n1 es 3
