--- a/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-04-Ejemplos.md
+++ b/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-04-Ejemplos.md
@@ -32,7 +32,7 @@ i = tasa de interés
 CON INGRESOS
 
 $$
-- II - A\left[\frac{(1+i)^n-1}{i*(1+i)^n}\right] + VS \left[ \frac{i}{(1+i)^n}\right] + IN\left[\frac{(1+i)^n-1}{i*(1+i)^n}\right]
+- II - A\left[\frac{(1+i)^n-1}{i*(1+i)^n}\right] + VS \left[ \frac{1}{(1+i)^n}\right] + IN\left[\frac{(1+i)^n-1}{i*(1+i)^n}\right]
 $$
 ```
 II = inversión inicial
