--- a/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-04-Ejemplos.md
+++ b/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-04-Ejemplos.md
@@ -18,7 +18,7 @@ Se le calcula el valor presente a cada alternativa.
 - Si el flujo de caja incluye ingresos provenientes de venta y otros ingresos, ademas de los egresos, se selecciona o prefiere la alternativa que tenga un mayor valor presente (utilidades)
 
 $$
-- II - A*\frac{(1+i)^n-1}{i*(1+i)^n} + VS * \frac{i}{(1+i)^n}
+- II - A*\frac{(1+i)^n-1}{i*(1+i)^n} + VS * \frac{1}{(1+i)^n}
 $$
 ```
 II = inversión inicial
