--- a/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-11-Repaso.md
+++ b/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-09-11-Repaso.md
@@ -16,3 +16,11 @@ $$
 - II + (VS - II) \sum_{n=N}^{M-N}{(P/F, i, n)} - A(P/A,i,M) + VS{(P/F,i,n)}
 $$
 
+
+
+
+
+
+$$
+- II + (VS - II) \sum_{n=N}^{M-N}{(P/F, i, n)} - A(P/A,i,M) + VS{(P/F,i,n)} + IN\left[\frac{(1+i)^n-1}{i*(1+i)^n}\right]
+$$
