--- a/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-10-11-Simposio.md
+++ b/docs/Apuntes/8-ciclo/Ingenieria-economica/2024-10-11-Simposio.md
@@ -1,6 +1,6 @@
 **HAY TAREA DEL SIMPOSIO, LA FOTO ESTA EN MI CELULAR**
 
-# ANALISIS DE SENSIBILIDAD
+# ANÁLISIS DE SENSIBILIDAD
 
 Simplemente debemos ver que sucede si se mejora el costo, si se disminuyen los gastos... para comprobar si el TIR mejora o empeora, el objetivo es controlar algo de modo que se mejore el resultado final ya calculado.
 
@@ -11,7 +11,7 @@ Se debe conocer todos los gastos y todas las ventas.
 # Análisis Costo-Beneficio
 
 Indicador de bondad económica más utilizado en el estudio de Proyectos.
-Es una relación entre los beneficios o ingresos del proyecto y sus costos o egresos.
+Es una relación entre los beneficios o ingresos del proyecto y sus costos Y egresos.
 
 - Este método se incorpora al valor del dinero en el tiempo
 - Todos los beneficios y costos deben convertirse a una unidad monetaria equivalente o común
