--- a/docs/Apuntes/9-ciclo/gestion-negocios/2025-01-14-Tarea.md
+++ b/docs/Apuntes/9-ciclo/gestion-negocios/2025-01-14-Tarea.md
@@ -2,7 +2,7 @@
 
 La administración es útil para guiar nuestro negocio a saber administrar un departamento cuando trabajamos con alguien más.
 
-Un ingeniero en sistemas, debe fungir como admiinstrativo con los los propietarios de negocios, convierten recursos humanos, materiales... en una empresa útil y efectiva.
+Un ingeniero en sistemas, debe fungir como administrativo con los los propietarios de negocios, convierten recursos humanos, materiales... en una empresa útil y efectiva.
 
 **DEFINICIONES**
 - Es aplicar un _proceso administrativo_ a los **recursos** de la empresa para lograr eficiencia y eficacia.
@@ -16,7 +16,7 @@ Formado por:
 
 ## Proceso administrativo
 
-Es el conjunto de pasos que se siguen para encontrar el exito en la empresa
+Es el conjunto de pasos que se siguen para encontrar el éxito en la empresa
 
 **Planificar**, es ver a futuro, fijando metas
 **Organizar**, es coordinar los puestos de trabajo
