TEC.EMERGETENS + Gestion

--- a/docs/0-RES/IA/jupyter/02-carga-datos.ipynb
+++ b/docs/0-RES/IA/jupyter/02-carga-datos.ipynb
@@ -9,20 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from faker import Faker\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "[144 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "Dec     118   140   166   194   201   229   278   306   336   337   405   432"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "39    F   164    184    32"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
        "[320 rows x 7 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1067,49 +1067,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Gina Daniels</td>\n",
-       "      <td>richardalvarez@example.org</td>\n",
-       "      <td>+1-493-917-2758</td>\n",
-       "      <td>7648 Benson Dam, Peggyville, AL 65624</td>\n",
-       "      <td>1941-06-16</td>\n",
-       "      <td>Marketing executive</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Terri Curtis</td>\n",
+       "      <td>zherring@example.com</td>\n",
+       "      <td>288-729-4773</td>\n",
+       "      <td>446 Corey Shoals, Lake Margaretmouth, WI 96715</td>\n",
+       "      <td>1973-09-07</td>\n",
+       "      <td>Corporate investment banker</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>John White</td>\n",
-       "      <td>mtyler@example.org</td>\n",
-       "      <td>951.697.0715</td>\n",
-       "      <td>40396 Christopher Pines Suite 732, Brittneysid...</td>\n",
-       "      <td>1983-12-20</td>\n",
-       "      <td>Armed forces operational officer</td>\n",
+       "      <th>38</th>\n",
+       "      <td>William Jones</td>\n",
+       "      <td>dawn41@example.net</td>\n",
+       "      <td>(608)970-4175x220</td>\n",
+       "      <td>243 Michele Flat Apt. 942, Anthonyside, HI 93825</td>\n",
+       "      <td>1965-10-30</td>\n",
+       "      <td>Civil engineer, contracting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Kimberly Humphrey</td>\n",
-       "      <td>lcunningham@example.net</td>\n",
-       "      <td>(917)570-2030x923</td>\n",
-       "      <td>4257 Justin Mountains Apt. 141, Angelaburgh, V...</td>\n",
-       "      <td>1983-01-31</td>\n",
-       "      <td>Banker</td>\n",
+       "      <th>43</th>\n",
+       "      <td>Timothy Cardenas</td>\n",
+       "      <td>hblake@example.org</td>\n",
+       "      <td>001-633-421-9573x5099</td>\n",
+       "      <td>Unit 9575 Box 0464, DPO AA 21772</td>\n",
+       "      <td>1963-11-01</td>\n",
+       "      <td>Furniture conservator/restorer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Melinda Brown</td>\n",
-       "      <td>willissandra@example.com</td>\n",
-       "      <td>5702899262</td>\n",
-       "      <td>6484 Cynthia Harbor, North Morganton, AR 37904</td>\n",
-       "      <td>1940-07-05</td>\n",
-       "      <td>Ranger/warden</td>\n",
+       "      <th>61</th>\n",
+       "      <td>Joshua Harris</td>\n",
+       "      <td>nielsengina@example.net</td>\n",
+       "      <td>704-688-5183x03862</td>\n",
+       "      <td>07104 Quinn Keys Apt. 683, Alanfurt, NE 50462</td>\n",
+       "      <td>1949-10-26</td>\n",
+       "      <td>Private music teacher</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Charles Long</td>\n",
-       "      <td>jeremy27@example.net</td>\n",
-       "      <td>(766)564-6533x701</td>\n",
-       "      <td>222 Stephanie Junctions, Joshuaview, AK 52130</td>\n",
-       "      <td>1999-05-15</td>\n",
-       "      <td>Midwife</td>\n",
+       "      <th>63</th>\n",
+       "      <td>Nathan Russell</td>\n",
+       "      <td>kevinlowe@example.net</td>\n",
+       "      <td>(804)517-0032x54670</td>\n",
+       "      <td>2105 Smith Fork Apt. 470, Robinmouth, NY 87299</td>\n",
+       "      <td>1985-02-22</td>\n",
+       "      <td>Petroleum engineer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1121,49 +1121,49 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>947</th>\n",
-       "      <td>Diana Arias</td>\n",
-       "      <td>mckenzie28@example.net</td>\n",
-       "      <td>7083794619</td>\n",
-       "      <td>090 Long Viaduct Suite 259, Robbinsside, IA 30397</td>\n",
-       "      <td>1986-06-03</td>\n",
-       "      <td>Primary school teacher</td>\n",
+       "      <th>976</th>\n",
+       "      <td>Heidi Harris</td>\n",
+       "      <td>ierickson@example.org</td>\n",
+       "      <td>001-572-634-7163x7984</td>\n",
+       "      <td>201 Williams Roads, Jasonbury, WV 09722</td>\n",
+       "      <td>1958-03-12</td>\n",
+       "      <td>Insurance risk surveyor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>953</th>\n",
-       "      <td>Morgan Ward</td>\n",
-       "      <td>laura52@example.com</td>\n",
-       "      <td>999-633-0590x75037</td>\n",
-       "      <td>96102 Sue Shores Apt. 141, Karenchester, NE 81077</td>\n",
-       "      <td>1988-01-30</td>\n",
-       "      <td>Architectural technologist</td>\n",
+       "      <th>988</th>\n",
+       "      <td>William Wilson</td>\n",
+       "      <td>stanley95@example.net</td>\n",
+       "      <td>(489)263-4444</td>\n",
+       "      <td>38299 Henry Brook, North Michael, AR 60527</td>\n",
+       "      <td>1952-01-06</td>\n",
+       "      <td>Art gallery manager</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>955</th>\n",
-       "      <td>Nathaniel Hamilton</td>\n",
-       "      <td>hmurray@example.net</td>\n",
-       "      <td>(957)804-4180</td>\n",
-       "      <td>1324 Jamie Burgs, Ricechester, LA 04941</td>\n",
-       "      <td>1946-07-12</td>\n",
-       "      <td>Broadcast presenter</td>\n",
+       "      <th>992</th>\n",
+       "      <td>Jessica Chapman</td>\n",
+       "      <td>ehenson@example.org</td>\n",
+       "      <td>490.463.3106x6330</td>\n",
+       "      <td>USCGC Garcia, FPO AP 47998</td>\n",
+       "      <td>1945-03-18</td>\n",
+       "      <td>Drilling engineer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>984</th>\n",
-       "      <td>Linda Campbell</td>\n",
-       "      <td>woodkatherine@example.com</td>\n",
-       "      <td>512-394-2853x5213</td>\n",
-       "      <td>829 Perez Square, Petersonmouth, ID 23088</td>\n",
-       "      <td>1966-01-08</td>\n",
-       "      <td>Product/process development scientist</td>\n",
+       "      <th>994</th>\n",
+       "      <td>Taylor Moss</td>\n",
+       "      <td>simmonspatrick@example.net</td>\n",
+       "      <td>992.910.5264x439</td>\n",
+       "      <td>7238 Danielle Locks Apt. 796, Jameshaven, OK 3...</td>\n",
+       "      <td>1965-09-10</td>\n",
+       "      <td>Insurance risk surveyor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>985</th>\n",
-       "      <td>John Watts</td>\n",
-       "      <td>lisagill@example.net</td>\n",
-       "      <td>001-396-734-4648x8904</td>\n",
-       "      <td>1864 Davis Groves, Amandabury, AS 54809</td>\n",
-       "      <td>1969-06-15</td>\n",
-       "      <td>Bookseller</td>\n",
+       "      <th>995</th>\n",
+       "      <td>Vanessa Hernandez</td>\n",
+       "      <td>diane02@example.net</td>\n",
+       "      <td>+1-430-405-5888x2369</td>\n",
+       "      <td>530 Lori Points Suite 909, West Stephanie, MD ...</td>\n",
+       "      <td>1994-05-16</td>\n",
+       "      <td>Geologist, engineering</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1171,52 +1171,52 @@
        "</div>"
       ],
       "text/plain": [
-       "                      Name                       Email                  Phone  \\\n",
-       "Codigo                                                                          \n",
-       "3             Gina Daniels  richardalvarez@example.org        +1-493-917-2758   \n",
-       "10              John White          mtyler@example.org           951.697.0715   \n",
-       "11       Kimberly Humphrey     lcunningham@example.net      (917)570-2030x923   \n",
-       "11           Melinda Brown    willissandra@example.com             5702899262   \n",
-       "12            Charles Long        jeremy27@example.net      (766)564-6533x701   \n",
-       "...                    ...                         ...                    ...   \n",
-       "947            Diana Arias      mckenzie28@example.net             7083794619   \n",
-       "953            Morgan Ward         laura52@example.com     999-633-0590x75037   \n",
-       "955     Nathaniel Hamilton         hmurray@example.net          (957)804-4180   \n",
-       "984         Linda Campbell   woodkatherine@example.com      512-394-2853x5213   \n",
-       "985             John Watts        lisagill@example.net  001-396-734-4648x8904   \n",
+       "                     Name                       Email                  Phone  \\\n",
+       "Codigo                                                                         \n",
+       "1            Terri Curtis        zherring@example.com           288-729-4773   \n",
+       "38          William Jones          dawn41@example.net      (608)970-4175x220   \n",
+       "43       Timothy Cardenas          hblake@example.org  001-633-421-9573x5099   \n",
+       "61          Joshua Harris     nielsengina@example.net     704-688-5183x03862   \n",
+       "63         Nathan Russell       kevinlowe@example.net    (804)517-0032x54670   \n",
+       "...                   ...                         ...                    ...   \n",
+       "976          Heidi Harris       ierickson@example.org  001-572-634-7163x7984   \n",
+       "988        William Wilson       stanley95@example.net          (489)263-4444   \n",
+       "992       Jessica Chapman         ehenson@example.org      490.463.3106x6330   \n",
+       "994           Taylor Moss  simmonspatrick@example.net       992.910.5264x439   \n",
+       "995     Vanessa Hernandez         diane02@example.net   +1-430-405-5888x2369   \n",
        "\n",
        "                                                  Address Date of Birth  \\\n",
        "Codigo                                                                    \n",
-       "3                   7648 Benson Dam, Peggyville, AL 65624    1941-06-16   \n",
-       "10      40396 Christopher Pines Suite 732, Brittneysid...    1983-12-20   \n",
-       "11      4257 Justin Mountains Apt. 141, Angelaburgh, V...    1983-01-31   \n",
-       "11         6484 Cynthia Harbor, North Morganton, AR 37904    1940-07-05   \n",
-       "12          222 Stephanie Junctions, Joshuaview, AK 52130    1999-05-15   \n",
+       "1          446 Corey Shoals, Lake Margaretmouth, WI 96715    1973-09-07   \n",
+       "38       243 Michele Flat Apt. 942, Anthonyside, HI 93825    1965-10-30   \n",
+       "43                       Unit 9575 Box 0464, DPO AA 21772    1963-11-01   \n",
+       "61          07104 Quinn Keys Apt. 683, Alanfurt, NE 50462    1949-10-26   \n",
+       "63         2105 Smith Fork Apt. 470, Robinmouth, NY 87299    1985-02-22   \n",
        "...                                                   ...           ...   \n",
-       "947     090 Long Viaduct Suite 259, Robbinsside, IA 30397    1986-06-03   \n",
-       "953     96102 Sue Shores Apt. 141, Karenchester, NE 81077    1988-01-30   \n",
-       "955               1324 Jamie Burgs, Ricechester, LA 04941    1946-07-12   \n",
-       "984             829 Perez Square, Petersonmouth, ID 23088    1966-01-08   \n",
-       "985               1864 Davis Groves, Amandabury, AS 54809    1969-06-15   \n",
+       "976               201 Williams Roads, Jasonbury, WV 09722    1958-03-12   \n",
+       "988            38299 Henry Brook, North Michael, AR 60527    1952-01-06   \n",
+       "992                            USCGC Garcia, FPO AP 47998    1945-03-18   \n",
+       "994     7238 Danielle Locks Apt. 796, Jameshaven, OK 3...    1965-09-10   \n",
+       "995     530 Lori Points Suite 909, West Stephanie, MD ...    1994-05-16   \n",
        "\n",
-       "                                    Job Title  \n",
-       "Codigo                                         \n",
-       "3                         Marketing executive  \n",
-       "10           Armed forces operational officer  \n",
-       "11                                     Banker  \n",
-       "11                              Ranger/warden  \n",
-       "12                                    Midwife  \n",
-       "...                                       ...  \n",
-       "947                    Primary school teacher  \n",
-       "953                Architectural technologist  \n",
-       "955                       Broadcast presenter  \n",
-       "984     Product/process development scientist  \n",
-       "985                                Bookseller  \n",
+       "                             Job Title  \n",
+       "Codigo                                  \n",
+       "1          Corporate investment banker  \n",
+       "38         Civil engineer, contracting  \n",
+       "43      Furniture conservator/restorer  \n",
+       "61               Private music teacher  \n",
+       "63                  Petroleum engineer  \n",
+       "...                                ...  \n",
+       "976            Insurance risk surveyor  \n",
+       "988                Art gallery manager  \n",
+       "992                  Drilling engineer  \n",
+       "994            Insurance risk surveyor  \n",
+       "995             Geologist, engineering  \n",
        "\n",
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1401,7 @@
        "35    2  1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
