--- a/docs/0-RES/IA/jupyter/07-arbol-de-decisiones.ipynb
+++ b/docs/0-RES/IA/jupyter/07-arbol-de-decisiones.ipynb
@@ -156,13 +156,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9833333333333333"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Eficiencia\n",
+    "accuracy = metrics.accuracy_score(y_test, prediction)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Eficiencia\n",
-    "accuracy = metrics.accuracy_score(y_test, prediction)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
