--- a/docs/Apuntes/9-ciclo/gestion-negocios/2025-03-18-AIDA.md
+++ b/docs/Apuntes/9-ciclo/gestion-negocios/2025-03-18-AIDA.md
@@ -24,4 +24,5 @@ Hay anuncios impresos, audiovisuales...
 
 Una forma de llamar la atención es hacer algo exagerado, no necesariamente tiene que ser algo relacionado, sino poner algo que haga que el cliente ponga atención, todo es permitido para exagerar en la publicidad.
 
-Hay anuncios que tienen que interpretarse
+Hay anuncios que tienen que interpretarse.
+
