--- a/docs/0-RES/tecnologias-emergentes/proyecto final/recolector-audios.ipynb
+++ b/docs/0-RES/tecnologias-emergentes/proyecto final/recolector-audios.ipynb
@@ -22,7 +22,7 @@
     "# Importing necessary libraries\n",
     "import pandas as pd  # For data manipulation and analysis\n",
     "import numpy as np  # For numerical computations\n",
-    "import matplotlib.pyplot as plt  # For plotting and visualization\n",
+    "import matplotlib.pyplot as plt  # For plotting and visualizationa\n",
     "import librosa  # For audio processing\n",
     "from IPython.display import Audio  # For audio playback in Jupyter\n",
     "import glob  # For file path pattern matching\n",
